// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> does not render the last name 1`] = `
.c0 {
  max-width: 800px;
  margin: 0 auto;
  padding: 0 20px;
}

.c1 {
  margin: 16px 0 40px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  font-size: 15vw;
  font-weight: 700;
  text-transform: lowercase;
  margin: 0;
}

.c2 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2:focus {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:760px) {
  .c1 {
    margin: 40px 0 40px 0;
  }
}

@media (min-width:760px) {
  .c3 {
    font-size: 100px;
  }
}

<body>
  <div>
    <section
      class="c0"
    >
      <main>
        <header
          class="c1"
        >
          <a
            class="c2"
            href="/"
          >
            <h1
              class="c3"
            >
              John
            </h1>
          </a>
          <div
            class="c4"
          >
            <p>
              ThemeSwitcher
            </p>
          </div>
        </header>
      </main>
    </section>
  </div>
</body>
`;

exports[`<Header /> renders properly 1`] = `
.c0 {
  max-width: 800px;
  margin: 0 auto;
  padding: 0 20px;
}

.c1 {
  margin: 16px 0 40px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  font-size: 15vw;
  font-weight: 700;
  text-transform: lowercase;
  margin: 0;
}

.c2 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2:focus {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:760px) {
  .c1 {
    margin: 40px 0 40px 0;
  }
}

@media (min-width:760px) {
  .c3 {
    font-size: 100px;
  }
}

<body>
  <div>
    <section
      class="c0"
    >
      <main>
        <header
          class="c1"
        >
          <a
            class="c2"
            href="/"
          >
            <h1
              class="c3"
            >
              John
              <span
                class=""
                data-testid="header-lastname"
              >
                D
                .
              </span>
            </h1>
          </a>
          <div
            class="c4"
          >
            <p>
              ThemeSwitcher
            </p>
          </div>
        </header>
      </main>
    </section>
  </div>
</body>
`;
